--- a/src/assets/scss/core.scss
+++ b/src/assets/scss/core.scss
@@ -1,4 +1,6 @@
 @import '~bulma/bulma';
+@import "~slick-carousel/slick/slick.css";
+@import "~slick-carousel/slick/slick-theme.css";
 @import 'partials/theme-default';
 @import 'partials/colors';
 @import 'partials/sidebar';
